Open-MX 1.0.903 aka 1.1-rc3 (April 16th 2009, svn r2569)
========================================================

Improvements from previous release:
* Report an error when the peer table is full and some peers failed
  to be added.
* Add some early support for Linux kernel 2.6.30.
* Add some annotations in the source code.
* Fix some minor build-regressions in previous release candidates.
* Fix the management of linux kernel release string.
* Move FAQ.html inside the doc directory.

Caveats:
* No background progression or retransmission is done if the application
  does not invoke an Open-MX routine explicitly.

Open-MX 1.0.902 aka 1.1-rc2 (March 25th 2009, svn r2528)
========================================================
The 32bit/64bit Multi-Lib release.

Bug fixes:
* Workaround a kernel panic that may occur on 2.6.18 kernels because
  of the broken vmalloc_user() implementation.

Major Enhancements:
* Add --enable-multilib to build both 32bit and 64bit libraries,
  + Install them in lib32/ and lib64/ and symlink lib to the one
    that corresponds to the compiler default pointer size.
* Enable thread-safety by default.

Other improvements from previous release:
* The OMX_IFACES variable in open-mx.conf replaces the old IFACES.
* make install does not build anymore, make should be invoked first.
* Allow disabling udev support at make install with udev=0.
* Allow changing the target kernel with --with-linux-release
  instead of only enforcing its release name within Open-MX.
* Move kernel modules from lib/modules/ into modules/ with the
  install directory.
* Some fixes in the omx_check.sh testing script.

Open-MX 1.0.901 aka 1.1-rc1 (March 13th 2009, svn r2466)
========================================================
The improved non-MX-wire-compatibility release.

Major improvements from previous release:
* Improve non-MX-wire-compatible medium and large message performance
  by using full MTU packets in most cases instead of a power-of-two
  payload size.